avoiding repetitive exception handling for missing path params
